syntax = "proto3";

package authpb;

import "authpb/message.proto";

service AuthService {
  rpc IsAdmin(IsAdminRequest) returns (IsAdminResponse) {}
}

// IS ADMIN

message IsAdminRequest {
  string id = 1;
}

message IsAdminResponse {
  bool isAdmin = 1;
}
